Revision history for Task-Template-Benchmark

1.00_06 Version released at .  *** Development version. ***
        Added Text::SimpleTemplate requirement.
        Added Text::ScriptTemplate requirement.

1.00_05 Version released at 2010-10-19-08:47.  *** Development version. ***
        Require latest Text::Xslate and Data::MessagePack for Windows compat.
        Text::Xslate family of engines no-longer on Windows blacklist.

1.00_04 Version released at 2010-10-18-10:32.  *** Development version. ***
        Support for Text::Clevy rename to Text::Clevery.

1.00_03 Version released at 2010-10-04-19:32.  *** Development version. ***
        Added HTML::Mason requirement.
        Added Solution requirement.
        Added HTML::Macro requirement.
        Added Cache::Ref requirement.

1.00_02 Version released at 2010-08-15-22:30.  *** Development version. ***
        Added Parse::Template requirement.

1.00_01 Version released at 2010-08-12-11:37.  *** Development version. ***
        Updated version requirements for TextXslateTT plugin.
        Required version 0.36 of Module::Build for "installdeps".

1.00    Version released at 2010-08-02-06:58.
        Added "see also" to POD.
        Stripped POD from README intro.
        Typo fixes in documentation.

0.99_01 Version released at 2010-07-27-16:48.  *** Development version. ***
        Initial release.