@@ -40,21 +40,26 @@ my %modules = (
         'Cache::FastMmap'           => 0,
         'Cache::Ref'                => 0,
         'CHI'                       => 0,
+        'Template::AutoFilter'      => '0.130420',
         'Template::Tiny'            => 0,
         'Template'                  => 0,
+        'Template::Simple'          => '0.06',
         'Template::Stash::XS'       => 0,
         'Template::Parser::CET'     => 0,
         #  pre-0.05 Tenjin was an incompatible API change
         'Tenjin'                    => '0.05',
+        'Text::Caml'                => '0.10',
         'Text::ClearSilver'         => 0,
         'Text::Clevery'             => 0,
         'Text::MicroMason'          => 0,
         'Text::MicroTemplate'       => 0,
         'Text::MicroTemplate::Extended' => 0,
+        'Text::MiniTmpl'            => '1.1.1',
         'Text::ScriptTemplate'      => '0.08',
         'Text::SimpleTemplate'      => '0.36',
         'Text::Template'            => 0,
         'Text::Template::Simple'    => 0,
+        'Text::Templet'             => '3.0',
         'Text::Tmpl'                => 0,
         #  0.2012 required to work on Strawberry Perl on Win32/XP
         'Text::Xslate'              => '0.2012',
