@@ -9,3 +9,4 @@ t/00-load.t
 t/manifest.t
 t/pod-coverage.t
 t/pod.t
+META.json
