@@ -1,0 +1,94 @@
+{
+   "abstract" : "Task to install all template engines benchmarked by Template::Benchmark.",
+   "author" : [
+      "Sam Graham <libtemplate-benchmark-perl@illusori.co.uk>"
+   ],
+   "dynamic_config" : 1,
+   "generated_by" : "Module::Build version 0.4003, CPAN::Meta::Converter version 2.120921",
+   "license" : [
+      "perl_5"
+   ],
+   "meta-spec" : {
+      "url" : "http://search.cpan.org/perldoc?CPAN::Meta::Spec",
+      "version" : "2"
+   },
+   "name" : "Task-Template-Benchmark",
+   "prereqs" : {
+      "build" : {
+         "requires" : {
+            "Module::Build" : "0.36",
+            "Test::More" : "0"
+         }
+      },
+      "configure" : {
+         "requires" : {
+            "Module::Build" : "0.40"
+         }
+      },
+      "runtime" : {
+         "requires" : {
+            "CHI" : "0",
+            "Cache::Cache" : "0",
+            "Cache::CacheFactory" : "0",
+            "Cache::FastMemoryCache" : "0",
+            "Cache::FastMmap" : "0",
+            "Cache::Ref" : "0",
+            "Data::MessagePack" : "0.34",
+            "File::Spec" : "0",
+            "HTML::Macro" : "0",
+            "HTML::Mason" : "0",
+            "HTML::Template" : "0",
+            "HTML::Template::Compiled" : "0",
+            "HTML::Template::Expr" : "0",
+            "HTML::Template::JIT" : "0",
+            "HTML::Template::Pro" : "0",
+            "IO::File" : "0",
+            "JSON::Any" : "0",
+            "Mojo" : "0",
+            "Mojo::Template" : "0",
+            "NTS::Template" : "0",
+            "Parse::Template" : "0",
+            "Solution" : "0.000000004",
+            "Template" : "0",
+            "Template::Alloy" : "0",
+            "Template::AutoFilter" : "0.130420",
+            "Template::Benchmark" : "0",
+            "Template::Parser::CET" : "0",
+            "Template::Sandbox" : "0",
+            "Template::Simple" : "0.06",
+            "Template::Stash::XS" : "0",
+            "Template::Tiny" : "0",
+            "Tenjin" : "0.05",
+            "Term::ProgressBar::Simple" : "0",
+            "Text::Caml" : "0.10",
+            "Text::ClearSilver" : "0",
+            "Text::Clevery" : "0",
+            "Text::MicroMason" : "0",
+            "Text::MicroTemplate" : "0",
+            "Text::MicroTemplate::Extended" : "0",
+            "Text::MiniTmpl" : "v1.1.1",
+            "Text::ScriptTemplate" : "0.08",
+            "Text::SimpleTemplate" : "0.36",
+            "Text::Template" : "0",
+            "Text::Template::Simple" : "0",
+            "Text::Templet" : "3.0",
+            "Text::Tmpl" : "0",
+            "Text::Xslate" : "0.2012",
+            "Text::Xslate::Bridge::TT2" : "1.0002"
+         }
+      }
+   },
+   "provides" : {
+      "Task::Template::Benchmark" : {
+         "file" : "lib/Task/Template/Benchmark.pm",
+         "version" : "1.00_05"
+      }
+   },
+   "release_status" : "testing",
+   "resources" : {
+      "license" : [
+         "http://dev.perl.org/licenses/"
+      ]
+   },
+   "version" : "1.00_05"
+}
