@@ -1,8 +1,14 @@
 Revision history for Task-Template-Benchmark
 
 1.00_06 Version released at .  *** Development version. ***
-        Added Text::SimpleTemplate requirement.
-        Added Text::ScriptTemplate requirement.
+        Added requirements:
+            Template::AutoFilter.
+            Template::Simple.
+            Text::Caml.
+            Text::MiniTmpl.
+            Text::ScriptTemplate.
+            Text::SimpleTemplate.
+            Text::Templet.
 
 1.00_05 Version released at 2010-10-19-08:47.  *** Development version. ***
         Require latest Text::Xslate and Data::MessagePack for Windows compat.
